# NineLadies

./: Cargo.toml  README.md
9ladies/: CONTENTS.md  README.md  SPEC.md
9ladies/prompts/: barcode-finder.json  describe.json  people-count.json
src/: main.rs
tests/fixtures/: invalid-prompt.json  test-prompt.json
