[package]
name = "nineladies"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "9ladies"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21"
